# gremlin

./: .gitignore  AVR_fuses.xml  ChangeLog  Makefile  Makefile.am  Notes.txt  README  aclocal.m4  arduino.lang  config.h  config.status  configure  configure.ac  custom.css  preferences.ini  run.sh  untitled.gremlin
src/: Makefile  Makefile.am  chip_utils.py  chip_utils.ui  gremlin.py  gremlin.ui  main.py  parser.py  parser.ui  preferences.py  preferences.ui  serial_window.py  serial_window.ui  view_log.py  view_log.ui
