## Process this file with automake to produce Makefile.in
## Created by Anjuta

SUBDIRS = src 

dist_doc_DATA = \
	README \
	COPYING \
	AUTHORS \
	ChangeLog \
	INSTALL \
	NEWS \
	Notes.txt \
	gremlin.anjuta \
	arduino.lang \
	run.sh \
	untitled.gremlin \
	AVR_fuses.xml \
	preferences.ini



# Remove doc directory on uninstall
uninstall-local:
	-rm -r $(docdir)
